car api integration v6.0 MANY DTOs added. now mapping to DTOs makes via ModelMapper